# system-software-lab-2

./: CMakeLists.txt  ast.json  ast.mmd  grammar.js  input.mylang  main.c  readme.md
cfg/: main.mmd  main1.mmd  main2.mmd  test.mmd  test_expression.mmd  test_if.mmd  test_if_else.mmd  test_loop_while.mmd
src/: grammar.json  node-types.json  parser.c
test_input/: test_if.mylang  test_if_else.mylang  test_loop_while.mylang
utils/cfg-utils/: cfg-utils.c  cfg-utils.h  cfg.c  cfg.h
utils/common-utils/: common-utils.c  common-utils.h
utils/compiler-utils/cfg/: block_manage.c  block_manage.h  cfg.c  cfg.h  expression.c  expression.h  expressions.c  expressions.h  loop_context.c  loop_context.h  mermaid.c  mermaid.h  statement.h  statements.c  statements.h  types.c  types.h  utils.c  utils.h
utils/compiler-utils/semantics-analysis/: semantics-analysis.c
utils/compiler-utils/semantics-analysis/functions/: functions.c  functions.h
utils/compiler-utils/semantics-analysis/symbol/: symbol.c  symbol.h
utils/mermaid-utils/: mermaid-utils.c  mermaid-utils.h
